--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
+    <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }} {{ site.subtitle }}</title>
 
     <!-- Meta -->
     {% if page.excerpt %}
