cleaned up some layout (still needs work)

--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -15,6 +15,6 @@
 			<li class="{{ class }}"><a href="{{ link.url }}">{{ link.title }}</a></li>
 		{% endfor %}
 	</ul>
-    <!-- TODO: search function -->
+    <!-- TODO: search function; contact dropdown? -->
   </div>
 </nav>
