tweak variable name

--- a/_includes/_figures.html
+++ b/_includes/_figures.html
@@ -1,5 +1,5 @@
 {% assign td = site.picserizer.target %}
-{% assign dd = site.picserizer.default_dir %}
+{% assign dd = site.picserizer.default_src %}
 {% assign bf = include.base_image_filename %}
 
 
