--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -2,7 +2,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="/">{{ site.title }}</a>
+  <a class="navbar-brand p-3" href="/">{{ site.title }}<br><small class="text-muted">{{ site.subtitle }}</small></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -15,6 +15,6 @@
 			<li class="{{ class }}"><a href="{{ link.url }}">{{ link.title }}</a></li>
 		{% endfor %}
 	</ul>
-    <!-- TODO: search function -->
+    <!-- TODO: search function; contact dropdown? -->
   </div>
 </nav>
