--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,5 +13,12 @@
 
     {% include _scripts.html %}
 
+    <script type="text/javascript">
+        $(document).on('click', '[data-toggle="lightbox"]', function(event) {
+            event.preventDefault();
+            $(this).ekkoLightbox({
+                alwaysShowClose: true});
+        });
+    </script>
     </body>
 </html>
