styling of modal for lightbox

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
         $(document).on('click', '[data-toggle="lightbox"]', function(event) {
             event.preventDefault();
             $(this).ekkoLightbox({
-                alwaysShowClose: true});
+                alwaysShowClose: true
+            });
         });
     </script>
     </body>
