--- a/_includes/_video-embed.html
+++ b/_includes/_video-embed.html
@@ -1,4 +1,4 @@
-<figure>
+<figure class="vid">
 <iframe width="560" height="315" src="//www.youtube.com/embed/{{ include.id }}" frameborder="0" allowfullscreen="1"> </iframe>
 </figure>
 <!-- TODO: replace this file. It's only here to get jekyll to compile -->
