--- a/_includes/_open-graph.html
+++ b/_includes/_open-graph.html
@@ -8,7 +8,7 @@
 <meta name="twitter:image" content="{{ site.url }}/images/website/{{ page.image.feature }}">
 {% else %}
 <meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="{% if page.ogimage %}{{ site.url }}{{ page.ogimage }}{% else %}{{ site.url }}{{ site.og-image-default }}{% endif %}">
+<meta name="twitter:image" content="{% if page.ogimage %}{{ site.url }}{{ site.og-image-dir }}{{ page.ogimage }}{% else %}{{ site.url }}{{ site.og-image-default }}{% endif %}">
 {% endif %}
 
 <!-- Open Graph -->
@@ -21,5 +21,5 @@
 {% if page.image.feature %}
 <meta property="og:image" content="{{ site.url }}/images/website/{{ page.image.feature }}">
 {% else %}
-<meta property="og:image" content="{% if page.ogimage %}{{ site.url }}{{ page.ogimage }}{% else %}{{ site.url }}{{ site.og-image-default }}{% endif %}">
+<meta property="og:image" content="{% if page.ogimage %}{{ site.url }}}{{ site.og-image-dir }}{{ page.ogimage }}{% else %}{{ site.url }}{{ site.og-image-default }}{% endif %}">
 {% endif %}
