--- a/_includes/_figures.html
+++ b/_includes/_figures.html
@@ -17,5 +17,5 @@ data-gallery="post-gallery"
 data-remote="/{{ td }}/960/{{ bf }}"
 data-footer="{{ include.caption  | markdownify }}"
 data-title="{{ include.title  | markdownify }}">
-<figcaption class="post-caption">{{ include.caption  | markdownify }}</figcaption>
+<figcaption class="post-caption">{{ include.title  | markdownify }}</figcaption>
 </figure>
