--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -152,6 +152,7 @@ a.card-link:hover {
     display:block;
     margin:auto;
     padding:.5em;
+    max-width: 100%;
     border: $card-border-color 1px solid;
 }
 
@@ -214,6 +215,6 @@ code.highlighter-rouge {
     }
 
 }
-.vid {
+.video {
     text-align: center;
 }
