--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -181,7 +181,7 @@ $font-size-h6: 1rem !default;
 $headings-margin-bottom: ($spacer / 2) !default;
 $headings-font-family:   'Economica', 'PT Sans Narrow', sans-serif;
 $headings-font-weight:   400;
-$headings-line-height:   1.1 !default;
+$headings-line-height:   1.5;
 $headings-color:         inherit !default;
 
 $display1-size: 6rem !default;
