--- a/_layouts/gallery-index.html
+++ b/_layouts/gallery-index.html
@@ -9,7 +9,7 @@ layout: default
 <div class="col-lg-4">
     <div class="card pb-5" style="border:none;">
         <img class="" style="max-width:300px;margin:auto;" src="/{{gallery[0]}}/th/{{image.filename}}">
-        <a href="{{ gallery[0] }}" title="Go to {{ gallery[1].title}} gallery">
+        <a href="../{{ gallery[0] }}" title="Go to {{ gallery[1].title}} gallery">
             <div class="card-block">
                 <h4 class="card-title" style="text-align:center;">{{ gallery[1].title}}</h4>
             </div>
