--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,12 @@
 ---
 layout: default
 ---
+{% assign sorted=(site.documents | sort: 'sort_date') | reverse %}
 
 <div class="album container">
 
     <div class="row justify-content-center">
-        {% for post in site.posts limit:9 %}
+        {% for post in sorted limit:9 %}
         <div class="col-xs-1">
             <div class="card">
                 <a class="card-link" href="{{ post.url }}" title="Go to {{ post.title }}"></a>
