--- a/_layouts/gallery-index.html
+++ b/_layouts/gallery-index.html
@@ -1,20 +1,20 @@
 ---
 layout: default
 ---
-<div class="container">
-<div id="main" role="main" class="row justify-content-center">
+<div class="container album">
+<div role="main" class="row justify-content-around">
 {% for gallery in site.data.gallerylist %}
 {% for image in gallery[1].images %}
 {% if image.feature %}
-<div class="col-lg-4">
-    <div class="card pb-5" style="border:none;">
-        <img class="" style="max-width:300px;margin:auto;" src="/{{gallery[0]}}/th/{{image.filename}}">
-        <a href="../{{ gallery[0] }}" title="Go to {{ gallery[1].title}} gallery">
-            <div class="card-block">
-                <h4 class="card-title" style="text-align:center;">{{ gallery[1].title}}</h4>
-            </div>
-        </a>
+<div class="col-xs-1">
+    <a href="../{{ gallery[0] }}" title="Go to {{ gallery[1].title}} gallery">
+    <div class="card gallery-card">
+        <div class="card-block">
+            <img class="card-img-top" src="/{{gallery[0]}}/th/{{image.filename}}">
+            <h4 class="card-title" style="text-align:center;">{{ gallery[1].title}}</h4>
+        </div>
     </div>
+            </a>
 </div>
 {% endif %}
 {% endfor %}
