--- a/_includes/_gallery.html
+++ b/_includes/_gallery.html
@@ -1,13 +1,19 @@
+{% capture td %}{{ site.picserizer.target }}/galleries{% endcapture %}
+{% assign dd = site.picserizer.default_src %}
+{% assign lbm = site.picserizer.lb_max %}
 {% for image in page.images %}
 <div class="col-xs-1">
     <div class="card gallery-card">
-        <a href="{{page.folder_path}}/{{ image.filename }}" title="{{ image.title }}">
             <div class="card-block">
-                <img class="card-img-top" src="{{page.folder_path}}/th/{{image.filename}}" alt="{{ image.alt }}">
+                <img class="card-img-top" src="/{{ td }}/{{ dd }}/{{ image.filename }}" alt="{{ image.alt }}"
+                data-toggle="lightbox"
+                data-gallery="post-gallery"
+                data-remote="/{{ td }}/{{ lbm }}/{{ image.filename }}"
+                data-footer="{{ image.caption  | markdownify | remove: '<p>' | remove: '</p>'}}"
+                data-title="{{ image.title  | markdownify | remove: '<p>' | remove: '</p>'}}">
                 <p class="card-title">{{ image.title | markdownify | remove: '<p>' | remove: '</p>'}}</p>
                 <p class="card-text">{{ image.description | markdownify | remove: '<p>' | remove: '</p>'}}</p>
             </div>
-        </a>
     </div>
 </div>
 {% endfor %}
