--- a/_layouts/gallery-index.html
+++ b/_layouts/gallery-index.html
@@ -9,7 +9,7 @@ layout: default
     </div>
 
     <div class="row justify-content-center">
-        {% for post in sorted limit:9 %}
+        {% for post in paginator.posts %}
         <div class="col-xs-1">
             <div class="card">
                 <a class="" href="{{ post.url }}" title="Go to {{ post.title }}">
@@ -38,5 +38,7 @@ layout: default
         </div>
         {% endfor %}
     </div>
-
+{% if paginator.page_trail %}
+{% include _paginator-trail.html %}
+{% endif %}
 </div>
