--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
 <div class="album container" id="home">
 
     <div class="row justify-content-center">
-        {% for post in sorted limit:9 %}
+        {% for post in paginator.posts %}
         <div class="col-xs-1">
             <div class="card">
                 <a class="" href="{{ post.url }}" title="Go to {{ post.title }}">
@@ -35,5 +35,7 @@ layout: default
         </div>
         {% endfor %}
     </div>
-
+{% if paginator.page_trail %}
+{% include _paginator-trail.html %}
+{% endif %}
 </div>
